--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTGBS7qYB7AzqGm6UnPCiYLyz45M-NdjM&libraries=places"></script>
     <div id="root"></div>
   </body>
 </html>
