--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Modern Marketplace for Courses"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="./logo192.png" />
+    <link rel="manifest" href="./manifest.json" />
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
     <title>onInit App</title>
@@ -19,5 +19,14 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTGBS7qYB7AzqGm6UnPCiYLyz45M-NdjM&libraries=places"></script>
     <div id="root"></div>
+    <script>
+      if('serviceWorker' in navigator){
+        window.addEventListener('load', ()=>{
+          navigator.serviceWorker.register('./serviceworker.js')
+            .then(reg=>console.log('Success :', reg.scope))
+            .catch(err=>console.log('Failure :', err))
+        })
+      }
+    </script>
   </body>
 </html>
