--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Modern Marketplace for Courses"
     />
     <link rel="apple-touch-icon" href="./logo192.png" />
-    <link rel="manifest" href="./manifest.json" />
+    <!-- <link rel="manifest" href="./manifest.json" /> -->
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
     <title>onInit App</title>
@@ -20,13 +20,13 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTGBS7qYB7AzqGm6UnPCiYLyz45M-NdjM&libraries=places"></script>
     <div id="root"></div>
     <script>
-      if('serviceWorker' in navigator){
-        window.addEventListener('load', ()=>{
-          navigator.serviceWorker.register('./serviceworker.js')
-            .then(reg=>console.log('Success :', reg.scope))
-            .catch(err=>console.log('Failure :', err))
-        })
-      }
+      // if('serviceWorker' in navigator){
+      //   window.addEventListener('load', ()=>{
+      //     navigator.serviceWorker.register('./serviceworker.js')
+      //       .then(reg=>console.log('Success :', reg.scope))
+      //       .catch(err=>console.log('Failure :', err))
+      //   })
+      // }
     </script>
   </body>
 </html>
